corrects the shift of the input

--- a/src/common.css
+++ b/src/common.css
@@ -19,17 +19,19 @@ fieldset{
   left: 0;
   border: none;
   position:fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .search-form {
-display: block;
+/* display: block; */
 position: relative;
 width: 50%;
 max-width: 200px;
-margin-left: auto;
-margin-right: auto;
+/* margin-left: auto; */
+/* margin-right: auto; */
 }
 
 input[type="text"]{
